# scrape-stock-kpi

./: .bumpversion.cfg  .gitignore  .gitmessage  .lychee.toml  .markdownlint.json  .markdownlint.yml  .yamllint.yml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  Pipfile  README.md  llms.txt  make.bat  pyproject.toml
.claude/: settings.json
.github/: dependabot.yaml  dependabot.yml
.github/codeql/: codeql-config.yml
.github/templates/: llms.txt.tpl
.github/workflows/: bump-my-version.yaml  codeql.yaml  demo-snapshot.yaml  demo-snapshot.yml  fear-greed.yaml  gh-pages.yaml  issue-triage.yaml  links-fail-fast.yml  llms-txt.yaml  sbom.yaml  tag-release.yaml  validate.yaml
app/: __main__.py  __version__.py  app.py  fundamentals.py  sentiment.py  universe.py
app/assets/: assets.csv  assets_test.csv
app/assets/universes/: qte77-watchlist.txt
app/config/: defaults.json  dom.json
app/utils/: handle_assets.py  handle_config.py  handle_data.py  handle_files.py  handle_playwright.py  parse_args.py
docs/: UserStory.md  architecture.md  cnn-fg-api.md  llms.txt  roadmap.md
docs/SBOM/: github-depgraph.spdx.json  syft-scan.spdx.json
docs/decisions/: 0000-remove-traderfox.md  0001-defer-financetoolkit.md  0002-simplified-composites.md  0003-defer-rs-hedging-epic.md  0004-price-history-composite-input.md
docs/demo/: app.js  index.html  style.css  tsconfig.json  types.d.ts
results/: fear_greed_2026-05-10T08-04-47Z.json
results/cnn_fg/: 2025-05-12.json  2025-05-13.json  2025-05-14.json  2025-05-15.json  2025-05-16.json  2025-05-19.json  2025-05-20.json  2025-05-21.json  2025-05-22.json  2025-05-23.json  2025-05-27.json  2025-05-28.json  2025-05-29.json  2025-05-30.json  2025-06-02.json  2025-06-03.json  2025-06-04.json  2025-06-05.json  2025-06-06.json  2025-06-09.json  2025-06-10.json  2025-06-11.json  2025-06-12.json  2025-06-13.json  2025-06-16.json  2025-06-17.json  2025-06-18.json  2025-06-20.json  2025-06-23.json  2025-06-24.json  2025-06-25.json  2025-06-26.json  2025-06-27.json  2025-06-30.json  2025-07-01.json  2025-07-02.json  2025-07-03.json  2025-07-07.json  2025-07-08.json  2025-07-09.json  (+210 more)
results/demo/qte77-watchlist/: 2026-05-12.json  2026-05-14.json  2026-05-16.json  2026-05-17.json  index.json
scripts/: build_demo_manifest.py
src/: __main__.py  __version__.py  composite_scores.py  fundamentals.py  sentiment.py  universe.py
src/assets/universes/: crypto-top10.txt  dax40.txt  eurostoxx.txt  japan.txt  qte77-watchlist.txt  south-america.txt  south-korea.txt  sp500.txt
src/utils/: parse_args.py
tests/: conftest.py  test_build_demo_manifest.py  test_composite_scores.py  test_fundamentals.py  test_main.py  test_sentiment.py  test_smoke.py  test_universe.py
tests/fixtures/fear_greed/: current.json
tests/fixtures/fundamentals/: AAPL.json  GC=F.json
