[project]
name = "scrape-stock-kpi"
version = "0.2.0"
description = "Scrape the web for stock KPI without API keys"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.13"
dependencies = [
    "playwright>=1.48",
    "rich>=13.9",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pyright>=1.1",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
default-groups = ["dev", "test"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
extraPaths = ["app"]
include = ["app"]
reportMissingImports = "error"
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
addopts = "--strict-markers -q --tb=short"
markers = [
    "network: tests requiring network access",
    "playwright: tests requiring playwright browsers",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/__main__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
