[project]
name = "scrape-stock-kpi"
version = "0.2.0"
description = "Scrape the web for stock KPI without API keys"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "rich>=15.0",
    "tqdm>=4.67",
    "yfinance>=0.2.40",
]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "pyright>=1.1.400",
    "complexipy>=5.0",
]
test = [
    "pytest>=9.0",
    "pytest-cov>=7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
default-groups = ["dev", "test"]
exclude-newer = "2026-05-09T00:00:00Z"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
extraPaths = ["app"]
include = ["app"]
reportMissingImports = "error"
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -q --tb=short -m 'not network'"
markers = [
    "network: tests requiring network access (opt in via `pytest -m network`)",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/__main__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
