[project]
name = "analyze-stock-kpi"
version = "0.5.1"
description = "Analyze stock KPI: per-ticker fundamentals + CNN Fear & Greed sentiment via libraries, no API keys"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "rich>=15.0",
    "tqdm>=4.67",
    "yfinance>=0.2.40",
]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "pyright>=1.1.400",
    "complexipy>=5.0",
    "bump-my-version>=0.29",
]
test = [
    "pytest>=9.0",
    "pytest-cov>=7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
default-groups = ["dev", "test"]
exclude-newer = "2026-05-09T00:00:00Z"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
extraPaths = ["src"]
include = ["src"]
reportMissingImports = "error"
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -q --tb=short -m 'not network'"
markers = [
    "network: tests requiring network access (opt in via `pytest -m network`)",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/__main__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# Atomic version bumping. Single source of truth is [project].version;
# bumpversion keeps the README static badge and CHANGELOG header in sync,
# tags the release, and creates a conventional bump commit. Trigger
# via `uv run bump-my-version bump [major|minor|patch]` or the
# `bump-my-version.yaml` workflow_dispatch.
[tool.bumpversion]
current_version = "0.5.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true
allow_dirty = false
ignore_missing_version = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "v{new_version}"
message = "chore(release): bump {current_version} -> {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.md"
search = "version-{current_version}-blue"
replace = "version-{new_version}-blue"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = """
## [Unreleased]
"""
replace = """
## [Unreleased]

## [{new_version}] - {now:%Y-%m-%d}
"""
